* Customize template to spain * Upgrade to openfisca-core 14 * Add simple rules

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,7 @@ hang-closing = true
 ; F403, F405: We allow `import *`
 ; W503: We break lines before binary operators
 ignore = E251, E501, F403, F405, W503
+
+[nosetests]
+verbosity=3
+with-doctest=1
